# mailgun-listmonk-webhook

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
app/: main.py  models.py  route.py  schemas.py  services.py
app/schemas/: __init__.py  event.py  listmonk.py  mailgun.py  schemas.py  webhook.py
app/utils/: config.py  crypto.py
tests/: conftest.py  test_crypto.py  test_main.py  test_routes.py  test_services.py
