[project]
name = "mailgun-listmonk-webhook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "ruff>=0.15.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "asgiref>=3.11.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
